tests/type-errors/bad_contract_calling.arl
archetype bad_contract_calling

contract mycontract {
  entry pay ()
}

variable contract_i : mycontract = @KT1GabhR5P52hw6xs5P69BXJYAURaznhvN1k

entry exec (a : address) {
  effect {
    contract_i.pay()
  }
}
